--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -14,14 +14,9 @@ spring:
     username: cos
     password: cos1234
 
-  mvc:
-    view:
-      prefix: /templates/
-      suffix: .mustache
-
   jpa:
     hibernate:
-      ddl-auto: update #create update none
+      ddl-auto: create #create update none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
